CostalCloud/force-app/main/default/objects/TestRunPurchaseOrdersInt__c.object
<CustomObject>
    <description>This object is used just for testing which PO Orders to Run for</description>
    <fields>
        <fullName>Error_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For__c</fullName>
        <inlineHelpText>Name of person or program requesting test records (ie kitchens or doors etc)</inlineHelpText>
        <label>For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Key__c</fullName>
        <externalId>true</externalId>
        <label>Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message_from_API__c</fullName>
        <label>Message from API</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RunFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RunFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TestRunPurchaseOrdersInt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RunFlag__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Checkbox__c</columns>
        <columns>Store__c</columns>
        <columns>Message_from_API__c</columns>
        <columns>Integration_Key__c</columns>
        <columns>For__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Kitchens</fullName>
        <columns>NAME</columns>
        <columns>RunFlag__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Checkbox__c</columns>
        <columns>Store__c</columns>
        <columns>Message_from_API__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Integration_Key__c</columns>
        <columns>For__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>For__c</field>
            <operation>equals</operation>
            <value>Kitchens</value>
        </filters>
        <label>KItchens</label>
    </listViews>
    <listViews>
        <fullName>LivePO</fullName>
        <columns>NAME</columns>
        <columns>Integration_Key__c</columns>
        <columns>RunFlag__c</columns>
        <columns>Store__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Checkbox__c</columns>
        <columns>Message_from_API__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/28/2021 12:00 AM</value>
        </filters>
        <label>LivePO</label>
    </listViews>
    <listViews>
        <fullName>zAllSGIAllNotFound</fullName>
        <columns>NAME</columns>
        <columns>Store__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Checkbox__c</columns>
        <columns>Message_from_API__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Integration_Key__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Checkbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Purchase Orders - Not Found - Errors</label>
    </listViews>
    <listViews>
        <fullName>zAllSGIAllpops</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Error_Checkbox__c</columns>
        <columns>Store__c</columns>
        <columns>Message_from_API__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Integration_Key__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Error_Checkbox__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Purchase Orders Processed Successfully</label>
    </listViews>
    <nameField>
        <label>TEST Integration PO Numbers to Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestRunPurchaseOrdersInts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>