CostalCloud/force-app/main/default/objects/TestRunPurchaseOrdersInt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RunFlag__c</columns>
    <columns>Processed__c</columns>
    <columns>Error_Checkbox__c</columns>
    <columns>Store__c</columns>
    <columns>Message_from_API__c</columns>
    <columns>Integration_Key__c</columns>
    <columns>For__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>