CostalCloud/force-app/main/default/objects/TestRunPurchaseOrdersInt__c/listViews/Kitchens.listView-meta.xml
<ListView>
    <fullName>Kitchens</fullName>
    <columns>NAME</columns>
    <columns>RunFlag__c</columns>
    <columns>Processed__c</columns>
    <columns>Error_Checkbox__c</columns>
    <columns>Store__c</columns>
    <columns>Message_from_API__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Integration_Key__c</columns>
    <columns>For__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>For__c</field>
        <operation>equals</operation>
        <value>Kitchens</value>
    </filters>
    <label>KItchens</label>
</ListView>