CostalCloud/force-app/main/default/objects/TestRunPurchaseOrdersInt__c/listViews/LivePO.listView-meta.xml
<ListView>
    <fullName>LivePO</fullName>
    <columns>NAME</columns>
    <columns>Integration_Key__c</columns>
    <columns>RunFlag__c</columns>
    <columns>Store__c</columns>
    <columns>Processed__c</columns>
    <columns>Error_Checkbox__c</columns>
    <columns>Message_from_API__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/28/2021 12:00 AM</value>
    </filters>
    <label>LivePO</label>
</ListView>