CostalCloud/force-app/main/default/objects/TestRunPurchaseOrdersInt__c/listViews/zAllSGIAllpops.listView-meta.xml
<ListView>
    <fullName>zAllSGIAllpops</fullName>
    <columns>NAME</columns>
    <columns>Processed__c</columns>
    <columns>Error_Checkbox__c</columns>
    <columns>Store__c</columns>
    <columns>Message_from_API__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Integration_Key__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Error_Checkbox__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Purchase Orders Processed Successfully</label>
</ListView>